# its_day_discord_bot

./: Cargo.toml  README.md  secrets.example.toml
.github/workflows/: change-channel-name.yml
src/: channel.rs  main.rs  secrets.rs
