[package]
name = "its-day-discord-bot"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11.5", default-features = false, features = [
	"client",
	"gateway",
	"rustls_backend",
	"model",
] }
tokio = { version = "1.28.1", features = ["rt-multi-thread"] }
tracing = "0.1.37"
